# plato-mud-server

./: README.md  pyproject.toml
src/plato_mud_server/: __init__.py  core.py  mud.py
src/plato_mud_server.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_mud.py
